import org.springframework.boot.gradle.plugin.SpringBootPlugin

buildscript {
    repositories {
        mavenCentral()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath 'org.springframework.boot:spring-boot-gradle-plugin:3.3.11'
        classpath 'com.diffplug.spotless:spotless-plugin-gradle:6.+'
    }
}

plugins {
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
    id 'application'
    id 'maven-publish'
    id 'signing'
    id 'java-library'
    id "com.diffplug.spotless" version "6.25.0"
    id 'org.springframework.boot' version '3.3.11'
}

// Establish version and status
ext.githubProjectName = rootProject.name // Change if github project name is not the same as the root project's name

ext["tomcat.version"] = "10.1.54"

subprojects {
    tasks.withType(Javadoc).all { enabled = false }
}

apply from: "$rootDir/dependencies.gradle"
apply from: "$rootDir/springboot-bom-overrides.gradle"
apply from: "$rootDir/deploy.gradle"

allprojects {
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'java-library'
    apply plugin: 'project-report'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21

    group = 'org.conductoross'

    configurations {
        all {
            exclude group: 'ch.qos.logback', module: 'logback-classic'
            exclude group: 'ch.qos.logback', module: 'logback-core'
            exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
            exclude group: 'org.slf4j', module: 'slf4j-log4j12'

            resolutionStrategy.eachDependency { details ->
                if (details.requested.group.startsWith('com.fasterxml.jackson.') ) {
                    details.useVersion "2.18.0"
                }
                // Force commons-lang3 to 3.18.0+ for compatibility with commons-compress used by Testcontainers
                if (details.requested.group == 'org.apache.commons' && details.requested.name == 'commons-lang3') {
                    details.useVersion "3.18.0"
                }
                // Force Netty components that follow the core Netty version to the fixed version.
                if (details.requested.group == 'io.netty' && 
                    !details.requested.name.contains('tcnative') && 
                    !details.requested.name.contains('codec-base') &&
                    !details.requested.name.contains('codec-compression')) {
                    details.useVersion revNetty
                }
                // Force Micrometer to prevent version downgrade that brings vulnerable Netty
                if (details.requested.group == 'io.micrometer' && details.requested.name.startsWith('micrometer-')) {
                    details.useVersion revMicrometer
                }
                // Force Netty codec specifically for Micrometer transitive dependencies
                if (details.requested.group == 'io.netty' && details.requested.name == 'netty-codec') {
                    details.useVersion revNetty
                }
                // Force Reactor Netty line for CVE remediation when BOM-managed versions lag.
                if (details.requested.group == 'io.projectreactor.netty') {
                    details.useVersion revReactor
                }
                // Keep grpc artifacts aligned (including grpc-netty-shaded) to avoid vulnerable transitive mixes.
                if (details.requested.group == 'io.grpc') {
                    details.useVersion revGrpc
                }
                // Force all Log4j 2 modules (api, core, slf4j-impl, jul, web, etc.)
                // to revLog4j2 to remediate CVE-2026-34478. This is defense-in-depth
                // alongside the 'log4j2.version' BOM override, in case a transitive
                // dependency requests the old vulnerable line directly.
                if (details.requested.group == 'org.apache.logging.log4j') {
                    details.useVersion revLog4j2
                }
                // Force all Google Protobuf Java artifacts (protobuf-java,
                // protobuf-java-util, protobuf-bom, etc.) to revProtoBuf to
                // remediate CVE-2026-0994. protobuf-java-util is pulled in
                // transitively (e.g. via gRPC) on the older 3.25.x line and
                // must be aligned with the fixed 4.33.x runtime.
                // protoc itself is excluded because grpc/build.gradle pins
                // it to 3.25.5 for code-generation compatibility.
                if (details.requested.group == 'com.google.protobuf'
                        && details.requested.name != 'protoc'
                        && !details.requested.name.startsWith('protoc-gen-')) {
                    details.useVersion revProtoBuf
                }
            }

            // Resolve the lz4-java capability conflict: Kafka 3.9.x pulls
            // 'at.yawk.lz4:lz4-java' (the maintained coordinate after the
            // original maintainer lost publish access to 'org.lz4'), while
            // Elasticsearch 7.17.x still pulls the legacy 'org.lz4:lz4-java'.
            // Both declare capability 'org.lz4:lz4-java', so Gradle requires
            // an explicit selection. The two artifacts ship the same
            // 'net.jpountz.lz4.*' classes and are drop-in compatible, so we
            // pick the highest version (1.10.1 from at.yawk.lz4) — newer
            // gives us upstream bug/security fixes.
            resolutionStrategy.capabilitiesResolution.withCapability('org.lz4:lz4-java') {
                selectHighestVersion()
            }
        }
    }

    repositories {
        mavenCentral()
    }

    dependencyManagement {
        imports {
            // dependency versions for the BOM can be found at https://docs.spring.io/spring-boot/docs/3.1.4/reference/htmlsingle/#appendix.dependency-versions
            mavenBom(SpringBootPlugin.BOM_COORDINATES)
        }
    }

    dependencies {
        implementation('org.apache.logging.log4j:log4j-core')
        implementation('org.apache.logging.log4j:log4j-api')
        implementation('org.apache.logging.log4j:log4j-slf4j-impl')
        implementation('org.apache.logging.log4j:log4j-jul')
        implementation('org.apache.logging.log4j:log4j-web')
        implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
        implementation "com.networknt:json-schema-validator:${revJSonSchemaValidator}"
        compileOnly 'org.projectlombok:lombok:1.18.42'

        annotationProcessor 'org.projectlombok:lombok:1.18.42'
        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

        testImplementation('org.springframework.boot:spring-boot-starter-test')
        testImplementation('org.springframework.boot:spring-boot-starter-log4j2')
        testImplementation 'junit:junit'
        testImplementation "org.junit.vintage:junit-vintage-engine"
        testAnnotationProcessor 'org.projectlombok:lombok:1.18.42'

        //Locks for the dependecies
        implementation('org.codehaus.jettison:jettison') {
            version {
                strictly '1.5.4'
            }
        }
        implementation('org.apache.tomcat.embed:tomcat-embed-core')
    }
    // processes additional configuration metadata json file as described here
    // https://docs.spring.io/spring-boot/docs/2.3.1.RELEASE/reference/html/appendix-configuration-metadata.html#configuration-metadata-additional-metadata
    compileJava.inputs.files(processResources)

    test {
        useJUnitPlatform()
        testLogging {
            events = ["SKIPPED", "FAILED"]
            exceptionFormat = "full"
            displayGranularity = 1
            showStandardStreams = false
        }
    }
    bootJar {
        enabled = false
    }
}

// all client and their related modules are published with Java 17 compatibility
["annotations", "common", "grpc", "grpc-client"].each {
    project(":conductor-$it") {
        compileJava {
            options.release = 21
        }
    }
}

task server {
    dependsOn ':conductor-server:bootRun'
}

configure(allprojects - project(':conductor-grpc')) {
    apply plugin: 'com.diffplug.spotless'

    spotless {
        java {
            googleJavaFormat().aosp()
            removeUnusedImports()
            importOrder('java', 'javax', 'org', 'com.netflix', '', '\\#com.netflix', '\\#')
            licenseHeaderFile("$rootDir/licenseheader.txt")
        }
    }
}

['cassandra-persistence', 'core', 'redis-concurrency-limit', 'test-harness'].each {
    configure(project(":conductor-$it")) {
        spotless {
            groovy {
                importOrder('java', 'javax', 'org', 'com.netflix', '', '\\#com.netflix', '\\#')
                licenseHeaderFile("$rootDir/licenseheader.txt")
            }
        }
    }
}
